--- a/merwinDam.html
+++ b/merwinDam.html
@@ -19,6 +19,8 @@
 <script>
 pannellum.viewer('panorama', {
     "type": "equirectangular",
+    "bounds": [-90, 90],
+
     
     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/merwinDamArielWA98603-CC.jpg"
 });
