--- a/merwinDam.html
+++ b/merwinDam.html
@@ -20,8 +20,8 @@
 pannellum.viewer('panorama', {
     "type": "equirectangular",
     "autoLoad" : true,
+    "setPitch": 0,
     "setPitchBounds": [-90, 90],
-
     
     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/merwinDamArielWA98603-CC.jpg"
 });
