Template panorama testing.

--- a/merwinDam.html
+++ b/merwinDam.html
@@ -20,7 +20,9 @@
 pannellum.viewer('panorama', {
     "type": "equirectangular",
     "autoLoad" : true,
-    "setPitch": -90,
+    "vaov": "180",
+    "maxPitch": "40",
+    "autoRotate": "-2",
     
     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/merwinDamArielWA98603-CC.jpg"
 });
