--- a/merwinDam.html
+++ b/merwinDam.html
@@ -21,7 +21,8 @@ pannellum.viewer('panorama', {
     "type": "equirectangular",
     "autoLoad" : true,
     "vaov": "130",
-    "maxPitch": "10",
+    "setPitch": "-15",
+    "maxPitch": "0",
     "autoRotate": "-2",
     
     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/merwinDamArielWA98603-CC.jpg"
