--- a/merwinDam.html
+++ b/merwinDam.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="https://cdn.pannellum.org/2.3/pannellum.js"></script>
     <style>
     #panorama {
-        width: 640px;
-        height: 480px;
+        width: 95%;
+        height: 95%;
     }
     </style>
 </head>
