--- a/merwinDam.html
+++ b/merwinDam.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="https://cdn.pannellum.org/2.3/pannellum.js"></script>
     <style>
     #panorama {
+        width: 1000px;
+        height: 500px;
     }
     </style>
 </head>
