--- a/merwinDam.html
+++ b/merwinDam.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div id="panorama"></div>
+<div id="merwinDam"></div>
 <script>
 pannellum.viewer('panorama', {
     "type": "equirectangular",
@@ -25,7 +25,7 @@ pannellum.viewer('panorama', {
     "maxPitch": "-3",
     "autoRotate": "-5",
     
-    "panorama": "https://s3.amazonaws.com/propr/panoramas/halfSize/merwinDamArielWA98603-CC.jpg"
+    "merwinDam": "https://s3.amazonaws.com/propr/panoramas/halfSize/merwinDamArielWA98603-CC.jpg"
 });
 </script>
 
