--- a/merwinDam.html
+++ b/merwinDam.html
@@ -17,7 +17,7 @@
 
 <div id="merwinDam"></div>
 <script>
-pannellum.viewer('panorama', {
+pannellum.viewer('merwinDam', {
     "type": "equirectangular",
     "autoLoad" : true,
     "vaov": "135",
@@ -25,7 +25,7 @@ pannellum.viewer('panorama', {
     "maxPitch": "-3",
     "autoRotate": "-5",
     
-    "merwinDam": "https://s3.amazonaws.com/propr/panoramas/halfSize/merwinDamArielWA98603-CC.jpg"
+    "panorama": "https://s3.amazonaws.com/propr/panoramas/halfSize/merwinDamArielWA98603-CC.jpg"
 });
 </script>
 
