--- a/merwinDam.html
+++ b/merwinDam.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.pannellum.org/2.3/pannellum.css"/>
     <script type="text/javascript" src="https://cdn.pannellum.org/2.3/pannellum.js"></script>
     <style>
-    #panorama {
+    #merwinDam {
         width: 1000px;
         height: 500px;
     }
