Started formatting the panorama demo section.

--- a/index.html
+++ b/index.html
@@ -187,12 +187,18 @@
             <div id="container">
               <style>
                   #merwinDam {
-                      width: 75%;
-                      height: 300px;
+                      width: 65%;
+                      height: 350px;
                       border: 1px solid black;
                       text-align: center;
                       float: left;
                       left: 5px;
+                      margin: 20px;
+                  }
+                  #merwinDescription {
+                    width: 25%;
+                    height: 300px;
+                    float: right;
                   }
               </style>
               <div id="merwinDam"></div>
@@ -208,6 +214,7 @@
                   "panorama": "https://s3.amazonaws.com/propr/panoramas/halfSize/merwinDamArielWA98603-CC.jpg"
               });
               </script>
+              <div id="merwinDescription"><h4>Merwin Dam, Ariel, Washington <br>Date: August something, 2017</h4></div>
               <div id="percivalLanding"></div>
               <div id="broadStreet"></div>
             </div>
