--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <!--Fav-->
-    <link href="logos/proprPlaintext.png" rel="shortcut icon">
+    <link href="logos/proprPlaintext-favicon.png" rel="shortcut icon">
     
     <!--styles-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
