--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
     
     <!--[if lt IE 9]>
        <script type="text/javascript" src="js/html5shiv.min.js"></script>
@@ -106,6 +107,8 @@
                     <img id=mainLogo src="logos/proprTechnologySolutionsGunmetal-transBackground.png">
                     <br><br>
                     <span class="typed"></span>
+                    <br><br><br><br>
+                    <h1 id="stepIntotheFuture">Step Into the Future.</h1>
                   </div>
               </div>
               <div class="mouse-icon margin-20">
@@ -218,11 +221,14 @@
                   }
               </style>
               <div class="portfolioPano-left" id="merwinDam"></div>
-              <div class="portfolioDesc-right"><h4>Merwin Dam, Ariel, Washington <br>Date: August 20, 2017</h4></div>
+              <div class="portfolioDesc-right"><br><br><br><h4>Merwin Dam, Ariel, Washington <br>Date: August 20, 2017</h4></div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d177463.06169900682!2d-122.58820193441561!3d45.974048912000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5494310710bac379%3A0x4ea89e61edc91a26!2sLake+Merwin!5e0!3m2!1sen!2sus!4v1504679280659" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
               <div class="portfolioPano-right" id="percivalLanding"></div>
-              <div class="portfolioDesc-left"><h4>Percival Landing, Olympia, Washington <br>Date: August 23, 2017</h4></div>
+              <div class="portfolioDesc-left"><br><br><br><h4>Percival Landing, Olympia, Washington <br>Date: August 23, 2017</h4></div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2718.6636477427255!2d-122.90604384774124!3d47.04683057904935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5491751a344faf8f%3A0xc05edcb46eec4109!2sPercival+Landing+Park!5e0!3m2!1sen!2sus!4v1504679741268" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
               <div class="portfolioPano-left" id="broadStreet"></div>
-              <div class="portfolioDesc-right"><h4>Liberty Street and Broad Street, Bloomfield, New Jersey <br>Date: September 1, 2017</h4></div>
+              <div class="portfolioDesc-right"><br><br><br><h4>Liberty Street and Broad Street, Bloomfield, New Jersey <br>Date: September 1, 2017</h4></div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.471869796412!2d-74.19963344782644!3d40.79562347922171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2553cd62f1c93%3A0x48aaa66e589d598c!2sBroad+St+%26+Liberty+St%2C+Bloomfield%2C+NJ+07003!5e0!3m2!1sen!2sus!4v1504679881811" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
               <script>
                 pannellum.viewer('merwinDam', {
                     "type": "equirectangular",
@@ -253,7 +259,7 @@
                     "maxPitch": "-3",
                     "autoRotate": "-5",
                     
-                    "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/BloomfieldAvenue%26LibertyStreetBloomfieldNJ07003-25m-CC.jpg"
+                    "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/BroadStreet%26LibertyStreetBloomfieldNJ07003-25m-CC.jpg"
                 });
                 </script>
             </div>
