--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 pannellum.viewer('merwinDam', {
                     "type": "equirectangular",
                     "autoLoad" : true,
-                    "vaov": "150",
+                    "vaov": "140",
                     "setPitch": "-15",
                     "maxPitch": "0",
                     "autoRotate": "-5",
@@ -239,6 +239,8 @@
                     "autoRotateInactivityDelay": "1000",
                     "hfov": "80",
                     "compass": true,
+                    "minHfov": "30",
+                    "maxHfov": "130",
 
 
                     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/merwinDamArielWA98603-CC.jpg"
@@ -246,7 +248,7 @@
                 pannellum.viewer('percivalLanding', {
                     "type": "equirectangular",
                     "autoLoad" : true,
-                    "vaov": "150",
+                    "vaov": "140",
                     "setPitch": "-15",
                     "maxPitch": "0",
                     "autoRotate": "-5",
@@ -254,6 +256,8 @@
                     "autoRotateInactivityDelay": "1000",
                     "hfov": "80",
                     "compass": true,
+                    "minHfov": "30",
+                    "maxHfov": "130",
                     
                     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/301ColumbiaStreetNWOlympiaWA98501-CC.jpg"
                 });
@@ -261,7 +265,7 @@
                 pannellum.viewer('broadStreet', {
                     "type": "equirectangular",
                     "autoLoad" : true,
-                    "vaov": "150",
+                    "vaov": "140",
                     "setPitch": "-15",
                     "maxPitch": "0",
                     "autoRotate": "-5",
@@ -269,6 +273,8 @@
                     "autoRotateInactivityDelay": "1000",
                     "hfov": "80",
                     "compass": true,
+                    "minHfov": "30",
+                    "maxHfov": "130",
 
                     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/BroadStreet%26LibertyStreetBloomfieldNJ07003-25m-CC.jpg"
                 });
