--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
                     "autoRotateInactivityDelay": "1000",
                     "hfov": "80",
                     "compass": true,
-                    "minHfov": "30",
-                    "maxHfov": "130",
+                    "maxLevel": "10",
 
 
                     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/merwinDamArielWA98603-CC.jpg"
@@ -256,8 +255,7 @@
                     "autoRotateInactivityDelay": "1000",
                     "hfov": "80",
                     "compass": true,
-                    "minHfov": "30",
-                    "maxHfov": "130",
+                    "maxLevel": "10",
                     
                     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/301ColumbiaStreetNWOlympiaWA98501-CC.jpg"
                 });
@@ -273,8 +271,7 @@
                     "autoRotateInactivityDelay": "1000",
                     "hfov": "80",
                     "compass": true,
-                    "minHfov": "30",
-                    "maxHfov": "130",
+                    "maxLevel": "10",
 
                     "panorama": "https://s3.amazonaws.com/propr/panoramas/quarterSize/BroadStreet%26LibertyStreetBloomfieldNJ07003-25m-CC.jpg"
                 });
