--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
                   <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                       <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                            <img id="Jay" width="75%" height="75%" src="WebAssets/Jared.jpg">
+                           
+                          <img id="Jay" height="300px" float="left" src="WebAssets/Jared.jpg">
                           <div class="wrap-about">
                             <table class="w-content">
                               <tr>
@@ -359,7 +360,7 @@
                     <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                         <div class="row">
                           <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                            <img id="Patrick" width="75%" height="75%" src="WebAssets/Patrick.jpg">
+                            <img id="Patrick" height="300px" src="WebAssets/Patrick.jpg">
                             <div class="wrap-about">
                               <table class="w-content">
                                 <tr>
@@ -413,7 +414,7 @@
                       <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                           <div class="row">
                             <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                                <img id="Anne" width="75%" height="75%" src="WebAssets/Anne.jpg">
+                                <img id="Anne" height="300px" src="WebAssets/Anne.jpg">
                               <div class="wrap-about">
                                 <table class="w-content">
                                   <tr>
@@ -468,7 +469,7 @@
                         <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                             <div class="row">
                               <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                                  <img id="Jajuan" width="75%" height="75%" src="WebAssets/Jajuan.jpg">
+                                  <img id="Jajuan" width="50%" height="50%" src="WebAssets/Jajuan.jpg">
                                 <div class="wrap-about">
                                   <table class="w-content">
                                     <tr>
@@ -525,7 +526,7 @@
                             <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                                 <div class="row">
                                   <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                                      <img id="Soda" width="75%" height="75%" src="WebAssets/Soda.jpg">
+                                      <img id="Soda" width="50%" height="50%" src="WebAssets/Soda.jpg">
                                     <div class="wrap-about">
                                       <table class="w-content">
                                         <tr>
