Changing all the default arguments for the panoramas. Testing.

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <div class="portfolioPano-left" id="merwinDam"></div>
               <div class="portfolioDesc-right"><br><br><br><h4>Merwin Dam, Ariel, Washington <br>Date: August 20, 2017</h4></div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d177463.06169900682!2d-122.58820193441561!3d45.974048912000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5494310710bac379%3A0x4ea89e61edc91a26!2sLake+Merwin!5e0!3m2!1sen!2sus!4v1504679280659" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-              <div class="portfolioPano-right" id="percivalLanding"></div>
+              <div class="portfolioPano-right" id="percivalLanding">Author: Jay Price &copy; <img src="logos/proprPlaintext-favicon.png"> Technology Solutions, 2017.</div>
               <div class="portfolioDesc-left"><br><br><br><h4>Percival Landing, Olympia, Washington <br>Date: August 23, 2017</h4></div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2718.6636477427255!2d-122.90604384774124!3d47.04683057904935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5491751a344faf8f%3A0xc05edcb46eec4109!2sPercival+Landing+Park!5e0!3m2!1sen!2sus!4v1504679741268" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
               <div class="portfolioPano-left" id="broadStreet"></div>
