Changing all the default arguments for the panoramas. Testing.

--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
                       <p class="head-about">
                         <h4>For the first time in my life, I feel strongly that I am using my skills to make the world a better place.
                         </h4><h4>I am excited to offer my customers a product that I believe cannot be found elsewhere.</h4>
+                        <img src="logos/proprTechnologySolutionsGoldWhiteBackground.png" width="190px">
                       </p>
                       
                       <h4>
@@ -390,6 +391,7 @@
                       <div class="w-content">
                         <p class="head-about">
                           <h4>One time I was doing the things for Amazon, and I realized that I am the smart dude doing the things. Then they gave me some money, but it still wasn't as cool PROPR.</h4>
+                          <img src="logos/proprTechnologySolutionsGoldWhiteBackground.png" width="190px">
                         </p>
                         
                         <h4>
