--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.pannellum.org/2.3/pannellum.css">
 
     <script type="text/javascript" src="https://cdn.pannellum.org/2.3/pannellum.js"></script>
@@ -108,7 +107,10 @@
                     <br><br>
                     <span class="typed"></span>
                     <br><br><br><br>
-                    <h1 id="stepIntotheFuture">Step Into the Future.</h1>
+                    <style>
+                      @import url('https://fonts.googleapis.com/css?family=Arizonia');
+                    </style>
+                    <h1 id="step" >Step Into the Future.</h1>
                   </div>
               </div>
               <div class="mouse-icon margin-20">
