Changing all the default arguments for the panoramas. Testing.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <style>
                       @import url('https://fonts.googleapis.com/css?family=Arizonia');
                     </style>
-                    <h1 id="step" >Step Into the Future.</h1>
+                    <h1 id="step" class="stepFuture" >Step Into the Future.</h1>
                   </div>
               </div>
               <div class="mouse-icon margin-20">
