--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <style>
                       @import url('https://fonts.googleapis.com/css?family=Arizonia');
                     </style>
-                    <h1 id="step" class="stepFuture" >Step Into the Future.</h1>
+                    <div class="stepFuture" >Step Into the Future.</div>
                   </div>
               </div>
               <div class="mouse-icon margin-20">
