--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                         <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                             <div class="row">
                               <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                                  <img id="Jajuan" width="50%" height="50%" src="WebAssets/Jajuan.jpg">
+                                  <img id="Jajuan" height="300px" src="WebAssets/Jajuan.jpg">
                                 <div class="wrap-about">
                                   <table class="w-content">
                                     <tr>
@@ -531,7 +531,7 @@
                             <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                                 <div class="row">
                                   <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                                      <img id="Soda" width="50%" height="50%" src="WebAssets/Soda.jpg">
+                                      <img id="Soda" height="300px" src="WebAssets/soda.jpg">
                                     <div class="wrap-about">
                                       <table class="w-content">
                                         <tr>
