--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="for-sticky">
         <!--LOGO-->
         <div class="col-md-2 col-xs-6 logo">
-          <a href="index.html"><img alt="logo" class="logo-nav" src="logos/proprPlaintext-narrow.png"></a>
+          <a href="index.html"><img alt="logo" class="logo-nav" src="logos/proprPlaintext-narrow.png" text-align:"left"></a>
         </div>
         <!--/.LOGO END-->
       </div>
@@ -1170,6 +1170,5 @@
     <script src="js/typed.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
     <script src="https://cdn.pannellum.org/2.3/pannellum.js"></script>
-    <script src="js/panoramas.js">
   </body>
 </html>
