Remove all references to http://

--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
           <div class="footer-bottom">
             <div class="container">Copyright &copy; PROPR Technology Solutions 2017
               <div class="row">
-                <a href="http://www.propr.tech"><img src="logos/proprTechnologySolutionsGold-transBackground.png" alt="PROPR Technology Solutions" class="center-block" width="275px" height="auto" /></a>
+                <a href="https://www.propr.tech"><img src="logos/proprTechnologySolutionsGold-transBackground.png" alt="PROPR Technology Solutions" class="center-block" width="275px" height="auto" /></a>
 			 </div>
             </div>
           </div>
