--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                                 <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                                     <div class="row">
                                       <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                                          <img id="Soda" height="300px" src="WebAssets/Anthony.jpg">
+                                          <img id="Anthony" height="300px" src="WebAssets/Anthony.jpg">
                                         <div class="wrap-about">
                                           <table class="w-content">
                                             <tr>
