Small formatting changes and corrections to copy.

--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                               <tr>
                                 <td class="title"><h3>About</h3></td>
                                 <td class="break">:</td>
-                                <td><h5>Once upon a time, Jay was an intelligence analyst and Arabic linguist in the Marine Corps. After five years serving his country, he attended Amherst College, where he double-majored in Political Science and Middle East Studies. He did a brief stint as a business analyst, before going back to school at Fordham University for a Master of Science in Data Analytics.
-                                  </h5><h5>With much trepidation, he co-founded PROPR Technology Solutions with Patrick Grimes in 2017. His hobbies include UAVs; playing piano, guitar, and singing; running; and all things tech.</h5></td>
+                                <td><h5>Once upon a time, Jay was an intelligence analyst and Arabic linguist in the Marine Corps. After five years serving his country, he attended Amherst College, where he double-majored in Political Science and Middle East Studies. He attended Fordham University for a Master of Science in Data Analytics.
+                                  </h5><h5>With much trepidation, after two years in the planning, he co-founded PROPR Technology Solutions with Patrick Grimes in 2017. His hobbies include UAVs; playing piano, guitar, and singing; running; and all things tech.</h5></td>
                               </tr>
                               <tr>
                                   <td class="title"><h3>Email</h3></td>
@@ -508,7 +508,7 @@
                                         He then went on to become a soldier in the US Army, as a Military Police/Working Dog Handler. 
                                       </h5>
                                       <h5>  
-                                          Jajuan is currently an aspiring entrepreneur in living and studying New York, discovering new passions in the technology industry.
+                                          Jajuan is currently an aspiring entrepreneur, living and studying New York, discovering new passions in the technology industry.
                                         </h5></td>
       
                                     </tr>
