Use optimized images

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 <div class="skillbar" data-percent="70%">
                     <div class="title head-sm">
                       Python
-                      <img class="skillLogo" src="images/python.png">
+                      <img class="skillLogo" src="optimized/image/python.png">
                     </div>
                     <div class="count-bar">
                       <div class="count"></div>
@@ -803,7 +803,7 @@
                           <div class="col-md-12 col-sm-12 col-xs-12 white-col">
                               <div class="row">
                                 <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
-                                    <img id="Soda" height="300px" src="WebAssets/soda.jpg">
+                                    <img id="Soda" height="300px" src="optimized/image/soda.jpg">
                                   <div class="wrap-about">
                                     <table class="w-content">
                                       <tr>
