fix, syntax error

--- a/index.big.html
+++ b/index.big.html
@@ -45,7 +45,7 @@
       <div class="for-sticky">
         <!--LOGO-->
         <div class="col-md-2 col-xs-6 logo">
-          <a href="index.html"><img alt="logo" class="logo-nav" src="optimized/image/proprPlaintext-narrow.png" text-align:"left"></a>
+          <a href="index.html"><img alt="logo" class="logo-nav" src="optimized/image/proprPlaintext-narrow.png" text-align="left"></a>
         </div>
         <!--/.LOGO END-->
       </div>
