--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </div>
                 <!--/.GRID Services END-->
                 <div id="demoVideo">
-                  <video id="quickDemoVid" autoplay="true" loop src="WebAssets/QuickHits2.mp4"></video>
+                  <video id="quickDemoVid" autoplay="true" loop src="WebAssets/QuickHits2.small.mp4"></video>
                 </div>
               </div>
             </div>
