Some of the changes Patrick asked for.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="for-sticky">
         <!--LOGO-->
         <div class="col-md-2 col-xs-6 logo">
-          <a href="index.html"><img alt="logo" class="logo-nav" src="logos/proprPlaintext-narrow.png" text-align:"left"></a>
+          <a href="index.html"><img alt="logo" class="logo-nav" id="littleCornerLogo" src="logos/PROPR-favicon.png" text-align:"left"></a>
         </div>
         <!--/.LOGO END-->
       </div>
@@ -542,7 +542,7 @@
       <h1 class="title-small-center text-center">
         <span>About Us</span>
       </h1>
-      <div>
+      <div class="container">
         <div class="col-md-6 col-sm-12 col-xs-12 white-col">
           <div class="row">
             <!--OWL CAROUSEL2-->
@@ -606,7 +606,7 @@
       <div>
       </div>
 
-      <div>
+      <div class="container">
           <div class="col-md-6 col-sm-12 col-xs-12 white-col">
             <div class="row">
               <!--OWL CAROUSEL2-->
@@ -666,7 +666,7 @@
       </div>
       <br>
 
-          <div>
+          <div class="container">
             <div class="col-md-6 col-sm-12 col-xs-12 white-col">
               <div class="row">
                 <!--OWL CAROUSEL2-->
@@ -726,7 +726,7 @@
           </div>
           <div>
           </div>
-          <div>
+          <div class="container">
               <div class="col-md-6 col-sm-12 col-xs-12 white-col">
                 <div class="row">
                   <!--OWL CAROUSEL2-->
@@ -795,7 +795,7 @@
             <div>
 
               </div>
-              <div>
+              <div class="container">
                   <div class="col-md-6 col-sm-12 col-xs-12 white-col">
                     <div class="row">
                       <!--OWL CAROUSEL2-->
@@ -857,7 +857,7 @@
 
                 <div>
                   </div>
-                  <div>
+                  <div class="container">
                       <div class="col-md-6 col-sm-12 col-xs-12 white-col">
                         <div class="row">
                           <!--OWL CAROUSEL2-->
@@ -1012,7 +1012,6 @@
       </div>
     <!--/.CONTENT-WRAP END-->
     </div>
-    
 
     <script
     src="https://code.jquery.com/jquery-2.2.4.min.js"
