Some of the changes Patrick wanted.

--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                                           <tr>
                                             <td class="title"><h3>Title</h3></td>
                                             <td class="break">:</td>
-                                            <td><h3>Account Executive</h3></td>
+                                            <td><h3>Head of Client Relations</h3></td>
                                           </tr>
                                           <tr>
                                             <td class="title"><h3>About</h3></td>
