Added copy for Anthony's profile.

--- a/index.html
+++ b/index.html
@@ -886,7 +886,8 @@
                                             <td class="title"><h3>About</h3></td>
                                             <td class="break">:</td>
                                             <td><h5>
-                                              </h5><h5></h5></td>
+                                              </h5>Anthony DeRosa is the head of client outreach at PROPR. He engages directly with clients to help them identify their media and technology requirements, and develop robust plans to deliver on those requirements.<h5>Anthony has a storied history in web development and design and has most recently been operating as the head of admissions and veteran affairs at a leading coding school in New York City. Before that, he served as an NCO in the US Army and in the medical profession as an EMT and board Certified Hyperbaric Technologist. Anthony’s breadth of expertise allows him to understand and integrate with business leaders, so that they can find the soundest solutions to boost their bottom line while evading the stifling complexity of implementing bleeding edge tech.</h5>
+                                            <h5>In his private life, Anthony appreciates honing his design and technical skills on various collaborative side projects. His reputation for developing lasting, productive relationships precedes him in the technical community, and so does his reputation for being a sociable and caring family man.</h5></td>
             
                                           </tr>
                                           <tr>
@@ -909,7 +910,7 @@
                                   <p></p>
                                   
                                   <h4>
-                                    - Anthony
+                                      “The only way to make sense out of change is to plunge into it, move with it, and join the dance.”  --Alan Watts-- <h5> - Anthony</h5>
                                   </h4>
                                 </div>
                               </div>
